routerifacebindir = /var/www/bin

routerifacebin_PROGRAMS = braddint brcreate brdel dhcpcctrl dhcpdctrl flushchain forwarding gwadd intconfig intdown intup ip_dynaddr_on ip_forward_on masquerade merge_net_configs network routeadd setaccess setfirewall setfirewall2 setpolicy setpforwarding show_dhclient_pid show_dhcpd_pid show_iwconfig show_input_table show_output_table show_forward_table show_forward_table_2 show_port_forwarding user_htpasswd

braddint_SOURCES	     = braddint.c
brcreate_SOURCES	     = brcreate.c
brdel_SOURCES		     = brdel.c
dhcpcctrl_SOURCES	     = dhcpcctrl.c
dhcpdctrl_SOURCES	     = dhcpdctrl.c
flushchain_SOURCES           = flushchain.c
forwarding_SOURCES           = forwarding.c
gwadd_SOURCES		     = gwadd.c
intconfig_SOURCES	     = intconfig.c
intdown_SOURCES		     = intdown.c
intup_SOURCES		     = intup.c
ip_dynaddr_on_SOURCES        = ip_dynaddr_on.c
ip_forward_on_SOURCES        = ip_forward_on.c
masquerade_SOURCES           = masquerade.c
merge_net_configs_SOURCES    = merge_net_configs.cpp
network_SOURCES              = network.c
routeadd_SOURCES	     = routeadd.c
setaccess_SOURCES            = setaccess.c
setfirewall_SOURCES          = setfirewall.c
setfirewall2_SOURCES         = setfirewall2.c
setpolicy_SOURCES            = setpolicy.c
setpforwarding_SOURCES       = setpforwarding.c
show_dhclient_pid_SOURCES    = show_dhclient_pid.c
show_dhcpd_pid_SOURCES       = show_dhcpd_pid.c
show_iwconfig_SOURCES        = show_iwconfig.c
show_input_table_SOURCES     = show_input_table.c
show_output_table_SOURCES    = show_output_table.c
show_forward_table_SOURCES   = show_forward_table.c
show_forward_table_2_SOURCES = show_forward_table_2.c
show_port_forwarding_SOURCES = show_port_forwarding.c
user_htpasswd_SOURCES        = user_htpasswd.cpp webusers.cpp

ipmaskbindir = /bin
ipmaskbin_PROGRAMS = ipmask
ipmaskbin_SOURCES = ipmask.c
