incfilesdir = /var/www/inc
incfiles_DATA = firewall.inc formatting.inc iptools.inc lan.inc navigation.inc portforward.inc Database.class.php DataHash.class.php RouterSettings.class.php routertools.inc status.inc usertools.inc wan.inc wifi.inc access.js firewall.js lan.js portforward.js wan.js wol.js
